# ex_sdk

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt
exchange_sdk/: exceptions.py
exchange_sdk/bot/: bot_client.py  bot_operations.py
exchange_sdk/client/: client.py
exchange_sdk/market/: market.py
exchange_sdk/trade/: trade.py
exchange_sdk/wallet/: wallet.py
